# link-scrapper

./: .gitignore  Makefile  backup.db  gui.py  link_scrapper.db  main.py  pyproject.toml  scrape.py  state.json  ull  utf8null  z.py
.github/workflows/: ci.yml
src/: main.py
src/link_scrapper/: __init__.py  container.py
src/link_scrapper/domain/: commands.py  handler.py  models.py  text.py
src/link_scrapper/hotkeys/: listener.py
src/link_scrapper/infra/: __init__.py  db.py  repositories.py
src/link_scrapper/queries/: link_queries.py
src/link_scrapper/services/: browser.py  logger.py  templates.py
tests/: test_domain.py  test_handlers.py  test_infra.py  test_models.py  test_queries.py  test_repositories.py  test_services.py
